--- a/html/angkorwat.html
+++ b/html/angkorwat.html
@@ -20,19 +20,19 @@
             <img src="/images/logo4.png" alt="" class="logo">
             <ul class="nav-links">
                 <li>
-                    <a href="/html/home.html" class="active" >ទំព័រដើម</a>
+                    <a href="/index.html" class="active" >ទំព័រដើម</a>
                 </li>
                 <li>
-                    <a href="/html/home.html#temple" class="active">ប្រាសាទ</a>
+                    <a href="/index.html#temple" class="active">ប្រាសាទ</a>
                 </li>
                 <li>
-                    <a href="/html/home.html#nature" class="active">ធម្មជាតិ</a>
+                    <a href="/index.html#nature" class="active">ធម្មជាតិ</a>
                 </li>
                 <li>
-                    <a href="/html/home.html#mustSee" class="active">តំបន់ល្បីៗ</a>
+                    <a href="/index.html#mustSee" class="active">តំបន់ល្បីៗ</a>
                 </li>
                 <li>
-                    <a href="/html/home.html#contact" class="active">ទំនាក់ទំនង</a>
+                    <a href="#contact" class="active">ទំនាក់ទំនង</a>
                 </li>
             </ul>
                 <img src="/images/moon2.png" alt="" id="icon">
@@ -42,7 +42,7 @@
     <div class="container">
         <div class="d-flex justify-content-between" >
             <h2>ប្រាសាទ​អង្គរវត្ត</h2>
-            <a href="/html/home.html#temple" class="btn btn-outline-primary d-flex align-items-center"><i class="fa-solid fa-arrow-left"></i>  &nbsp;ត្រឡប់ក្រោយ</a>
+            <a href="/index.html#temple" class="btn btn-outline-primary d-flex align-items-center"><i class="fa-solid fa-arrow-left"></i>  &nbsp;ត្រឡប់ក្រោយ</a>
         </div>
         <div class="row">
             <div class="col-xxl-5 col-xl-5 col-lg-5 col-md-12 col-sm-12 col-12 mt-2 content">
@@ -155,31 +155,35 @@
             </div>
         </div>
     </div>
-    <div class="container-fluid pb-3" style="background-color: black;" >
+    <div class="container-fluid pb-3" style="background-color: black;" id="contact" >
         <div class="container mt-0 pt-0 ">
             <div class="row">
                 <div class="col-xxl-4 col-xl-4 col-lg-4 col-md-12 col-sm-12 col-12 ">
                     <div class="ourTeam">
                         <h3>ក្រុមរបស់យើង</h3>
                         <div class="profile">
-                                <a href="https://facebook.com/mengleang.deaun" target="_blank">
-                                    <img src="/images/ourTeam/mengleang.jpg" alt="">
-                                   <span>Deaun Mengleang</span>
-                                </a>
-                                <a href="https://web.facebook.com/profile.php?id=100026261990477" target="_blank">
-                                    <img src="/images/ourTeam/savin.jpg" alt="">
-                                    <span>Em Savin</span>
-                                </a>
-                
-                                <a href="https://web.facebook.com/nak.kh.7777" target="_blank">
-                                    <img src="/images/ourTeam/vannak.JPG" alt="">
-                                    <span>Chhoeng Vannak</span>
-                                </a>
-                                <a href="https://web.facebook.com/pheavin.eang" target="_blank">
-                                    <img src="/images/ourTeam/pheavin.JPG" alt="">
-                                    <span>Eang Pheavin</span>
-                                </a>
-                            </div>  
+                            <a href="https://facebook.com/mengleang.deaun" target="_blank">
+                                <img src="/images/ourTeam/mengleang.jpg" alt="">
+                               <span>Deaun Mengleang</span>
+                            </a>
+                            <a href="https://web.facebook.com/profile.php?id=100026261990477" target="_blank">
+                                <img src="/images/ourTeam/savin.jpg" alt="">
+                                <span>Em Savin</span>
+                            </a>
+            
+                            <a href="https://web.facebook.com/nak.kh.7777" target="_blank">
+                                <img src="/images/ourTeam/vannak.JPG" alt="">
+                                <span>Chhoeng Vannak</span>
+                            </a>
+                            <a href="https://web.facebook.com/pheavin.eang" target="_blank">
+                                <img src="/images/ourTeam/pheavin.JPG" alt="">
+                                <span>Eang Pheavin</span>
+                            </a>
+                            <a href="https://web.facebook.com/" target="_blank">
+                                <img src="/images/ourTeam/phalkun.jpg" alt="">
+                                <span>Heng Nobphalkun</span>
+                            </a>
+                        </div>   
                         </div>
                 </div>
                 <div class="col-xxl-4 col-xl-4 col-lg-4 col-md-12 col-sm-12 col-12 ">
