--- a/html/banteaysrey.html
+++ b/html/banteaysrey.html
@@ -21,22 +21,16 @@
         <img src="/images/logo4.png" alt="" class="logo">
         <ul class="nav-links">
             <li>
-                <a href="/html/home.html" class="active" >ទំព័រដើម</a>
+                <a href="/index.html" class="active" >ទំព័រដើម</a>
             </li>
             <li>
-                <a href="/html/home.html#temple" class="active">ប្រាសាទ</a>
+                <a href="/index.html#temple" class="active">ប្រាសាទ</a>
             </li>
             <li>
-                <a href="/html/home.html#nature" class="active">ធម្មជាតិ</a>
+                <a href="/index.html#nature" class="active">ធម្មជាតិ</a>
             </li>
             <li>
-                <a href="#" class="active">អរូបី</a>
-            </li>
-            <li>
-                <a href="#" class="active">កែឆ្នៃ</a>
-            </li>
-            <li>
-                <a href="#" class="active">ជំនួញ</a>
+                <a href="/html/banteaysrey.html#contact" class="active">ទំនាក់ទំនង</a>
             </li>
         </ul>
             <img src="/images/moon2.png" alt="" id="icon">
@@ -45,7 +39,7 @@
 <div class="container mb-4">
     <div class="d-flex justify-content-between mb-3 align-items-center" >
         <h2>សូមស្វាគមន៍មកកាន់ប្រាសាទបន្ទាយស្រី</h2>
-        <a href="/html/home.html#temple" class="btn btn-outline-primary d-flex align-items-center"><i class="fa-solid fa-arrow-left"></i>  &nbsp;ត្រឡប់ក្រោយ</a>
+        <a href="/index.html#temple" class="btn btn-outline-primary d-flex align-items-center"><i class="fa-solid fa-arrow-left"></i>  &nbsp;ត្រឡប់ក្រោយ</a>
     </div>
     <div class="row">
         <div class="col-xxl-6 col-xl-6 col-lg-6 col-md-12 col-sm-12 col-12 slide-container ">
@@ -77,7 +71,7 @@
         </div>
     </div>
 </div>
-<div class="container-fluid pb-3" style="background-color: black;" >
+<div class="container-fluid pb-3" style="background-color: black;" id="contact">
     <div class="container mt-0 pt-0 ">
         <div class="row">
             <div class="col-xxl-4 col-xl-4 col-lg-4 col-md-12 col-sm-12 col-12 ">
@@ -100,6 +94,10 @@
                             <a href="https://web.facebook.com/pheavin.eang" target="_blank">
                                 <img src="/images/ourTeam/pheavin.JPG" alt="">
                                 <span>Eang Pheavin</span>
+                            </a>
+                            <a href="https://web.facebook.com/" target="_blank">
+                                <img src="/images/ourTeam/phalkun.jpg" alt="">
+                                <span>Heng Nobphalkun</span>
                             </a>
                         </div>  
                     </div>
