--- a/index.html
+++ b/index.html
@@ -261,6 +261,10 @@
                     <img src="/images/ourTeam/pheavin.JPG" alt="">
                     <span>Eang Pheavin</span>
                 </a>
+                <a href="https://web.facebook.com/pheavin.eang" target="_blank">
+                    <img src="/images/ourTeam/phalkun.jpg" alt="">
+                    <span>Heng Nobphalkun</span>
+                </a>
             </div>  
         </div>
     <div class="socialLink">
