--- a/bayon.html
+++ b/bayon.html
@@ -9,9 +9,9 @@
         <style> @import url('https://fonts.googleapis.com/css2?family=Bayon&family=Content:wght@400;700&family=Dangrek&family=Kantumruy+Pro&display=swap'); </style>
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.0.1/css/bootstrap.min.css">
-        <link rel="stylesheet" href="/css/header.css">
-        <link rel="stylesheet" href="/css/angkorwat.css">
-        <link rel="stylesheet" href="/css/footer.css">
+        <link rel="stylesheet" href="header.css">
+        <link rel="stylesheet" href="angkorwat.css">
+        <link rel="stylesheet" href="footer.css">
         
         <title>ប្រាសាទ​បាយ័ន</title>
     </head>
