--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Bayon&family=Content:wght@400;700&family=Dangrek&family=Kantumruy+Pro&display=swap" rel="stylesheet">
     <style> @import url('https://fonts.googleapis.com/css2?family=Bayon&family=Content:wght@400;700&family=Dangrek&family=Kantumruy+Pro&display=swap'); </style>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
-    <link rel="stylesheet" href="/css/home.css">
-    <link rel="stylesheet" href="/css/header.css">
+    <link rel="stylesheet" href="home.css">
+    <link rel="stylesheet" href="header.css">
     <title>តស់ ទៅលេងសៀមរាប</title>
 </head>
 <body>
@@ -295,7 +295,7 @@
 
    
 </body>
-<script src="/javascript/home.js"  defer></script>
-<script src="/javascript/action.js" ></script>
+<script src="home.js"  defer></script>
+<script src="action.js" ></script>
 
 </html>
