--- a/angkorwat.html
+++ b/angkorwat.html
@@ -9,9 +9,9 @@
         <style> @import url('https://fonts.googleapis.com/css2?family=Bayon&family=Content:wght@400;700&family=Dangrek&family=Kantumruy+Pro&display=swap'); </style>
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.0.1/css/bootstrap.min.css">
-        <link rel="stylesheet" href="/css/header.css">
-        <link rel="stylesheet" href="/css/angkorwat.css">
-        <link rel="stylesheet" href="/css/footer.css">
+        <link rel="stylesheet" href="header.css">
+        <link rel="stylesheet" href="angkorwat.css">
+        <link rel="stylesheet" href="footer.css">
         
         <title>ប្រាសាទ​អង្គរវត្ត</title>
     </head>
@@ -83,7 +83,7 @@
                         <img src="/images/temple/bayon.jpg" alt="" class="rounded-start">
                     </div>
                     <div class="col-xxl-6 col-xl-6 col-lg-7 col-md-8 col-8  ">
-                        <a href="/html/bayon.html">ប្រាសាទបាយ័ន</a>
+                        <a href="bayon.html">ប្រាសាទបាយ័ន</a>
                     </div>
                 </div>
                 <div class="row align-items-center more mb-3 m-0 p-0 border border-1 border-primary rounded">
@@ -91,7 +91,7 @@
                         <img src="/images/temple/banteay_srey.jpg" alt="" class="rounded-start">
                     </div>
                     <div class="col-xxl-6 col-xl-6 col-lg-7 col-md-8 col-8">
-                        <a href="/html/banteaysrey.html">ប្រាសាទបន្ទាយស្រី</a>
+                        <a href="banteaysrey.html">ប្រាសាទបន្ទាយស្រី</a>
                     </div>
                 </div>
                 <div class="row align-items-center more mb-3 m-0 p-0 border border-1 border-primary rounded">
@@ -99,7 +99,7 @@
                         <img src="/images/nature/quadBike.png" alt="" class="rounded-start" >
                     </div>
                     <div class="col-xxl-6 col-xl-6 col-lg-7 col-md-8 col-8  ">
-                        <a href="/html/nature.html">តំបន់ទេសចរណ៍ធម្មជាតិ</a>
+                        <a href="nature.html">តំបន់ទេសចរណ៍ធម្មជាតិ</a>
                     </div>
                 </div>
             </div>
@@ -214,7 +214,7 @@
         </div>
     </div>
 </body>
-<script src="/javascript/action.js" ></script>
-<script src="/javascript/angkorwat.js" defer ></script>
+<script src="action.js" ></script>
+<script src="angkorwat.js" defer ></script>
 
 </html>
