--- a/nature.html
+++ b/nature.html
@@ -9,10 +9,10 @@
         <style> @import url('https://fonts.googleapis.com/css2?family=Bayon&family=Content:wght@400;700&family=Dangrek&family=Kantumruy+Pro&display=swap'); </style>
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.0.1/css/bootstrap.min.css">
-        <link rel="stylesheet" href="/css/header.css">
-        <link rel="stylesheet" href="/css/angkorwat.css">
-        <link rel="stylesheet" href="/css/nature.css">
-        <link rel="stylesheet" href="/css/footer.css">
+        <link rel="stylesheet" href="header.css">
+        <link rel="stylesheet" href="angkorwat.css">
+        <link rel="stylesheet" href="nature.css">
+        <link rel="stylesheet" href="footer.css">
         
         <title>តំបន់ទេសចរណ៍ធម្មជាតិ</title>
     </head>
@@ -194,7 +194,7 @@
     </div>
 </div>
 </body>
-<script src="/javascript/action.js" ></script>
-<script src="/javascript/nature.js" defer></script>
+<script src="action.js" ></script>
+<script src="nature.js" defer></script>
 <script src="https://code.jquery.com/jquery-3.7.1.js" integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4=" crossorigin="anonymous"></script>
 </html>
