--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         <h2 class="sub-title">ប្រាសាទល្បីៗក្នុងខេត្តសៀមរាប</h2>
         <div class="temple">
             <div>
-                <a href="/html/angkorwat.html">
+                <a href="angkorwat.html">
                     <img src="/images/temple/angkorwat.jpg" alt="">
                     <div class="overlay">
                         <span >
@@ -54,7 +54,7 @@
                 </a>
             </div>
             <div>
-                <a href="/html/bayon.html">
+                <a href="bayon.html">
                     <img src="/images/temple/bayon.jpg" alt="">
                     <div class="overlay">
                         <span>
@@ -154,32 +154,32 @@
             <h2 class="sub-title">តំបន់ទេសចរណ៍ធម្មជាតិ</h2>
             <div class="nature">
                 <div>
-                    <a href="/html/nature.html#quadbike" >
+                    <a href="nature.html#quadbike" >
                         <img src="/images/nature/quadBike.png" alt="">
                         <h3>ជិះម៉ូតូកង់បួនគយគន់ធម្មជាតិ</h3>
                     </a>
                 </div>
                 <div>
-                    <a href="/html/nature.html#ferriswheel">
+                    <a href="nature.html#ferriswheel">
                         <img src="/images/nature/angkorEye.jpg" alt="">
                         <h3>ទស្សនាសៀមរាបពីលើអាកាស</h3>
                     </a>
                 </div>
                 <div>
-                    <a href="/html/nature.html">
+                    <a href="nature.html">
                         <img src="/images/nature/airballoon.jpg" alt="">
                         <h3>ជិះប៊ូឡុងហោះមើលថ្ងៃលិច</h3>
                     </a>
                 </div>
                 <div>
-                    <a href="/html/nature.html">
+                    <a href="nature.html">
                         <img src="/images/nature/koulenwaterfall.jpg" alt="">
                         <h3>ទឹកធ្លាក់ភ្នំគូលេន</h3>
                     </a>
                 </div>   
             </div>
             <div class="btnMore">
-                <a href="/html/nature.html">
+                <a href="nature.html">
                     <button>អានលម្អិត</button>
                 </a>
                 
