--- a/bayon.html
+++ b/bayon.html
@@ -20,7 +20,7 @@
             <img src="/images/logo4.png" alt="" class="logo">
             <ul class="nav-links">
                 <li>
-                    <a href="./index.html" class="active" >ទំព័រដើម</a>
+                    <a href="/visitsr/index.html" class="active" >ទំព័រដើម</a>
                 </li>
                 <li>
                     <a href="/index.html#temple" class="active">ប្រាសាទ</a>
