--- a/bayon.html
+++ b/bayon.html
@@ -23,7 +23,7 @@
                     <a href="/visitsr/index.html" class="active" >ទំព័រដើម</a>
                 </li>
                 <li>
-                    <a href="/visitsr/index.html#temple" class="active">ប្រាសាទ</a>
+                    <a href="/visitsr/index.html" class="active">ប្រាសាទ</a>
                 </li>
                 <li>
                     <a href="/visitsr/nature.html#nature" class="active">ធម្មជាតិ</a>
