--- a/angkorwat.html
+++ b/angkorwat.html
@@ -20,33 +20,33 @@
             <img src="/images/logo4.png" alt="" class="logo">
             <ul class="nav-links">
                 <li>
-                    <a href="/index.html" class="active" >ទំព័រដើម</a>
+                    <a href="./index.html" class="active" >ទំព័រដើម</a>
                 </li>
                 <li>
-                    <a href="/index.html#temple" class="active">ប្រាសាទ</a>
+                    <a href="./index.html#temple" class="active">ប្រាសាទ</a>
                 </li>
                 <li>
-                    <a href="/index.html#nature" class="active">ធម្មជាតិ</a>
+                    <a href="./index.html#nature" class="active">ធម្មជាតិ</a>
                 </li>
                 <li>
-                    <a href="/index.html#mustSee" class="active">តំបន់ល្បីៗ</a>
+                    <a href="./index.html#mustSee" class="active">តំបន់ល្បីៗ</a>
                 </li>
                 <li>
                     <a href="#contact" class="active">ទំនាក់ទំនង</a>
                 </li>
             </ul>
-                <img src="/images/moon2.png" alt="" id="icon">
+                <img src="./images/moon2.png" alt="" id="icon">
             <i class="fas fa-bars" onclick="togglebtn()"></i>
             
     </nav>
     <div class="container">
         <div class="d-flex justify-content-between" >
             <h2>ប្រាសាទ​អង្គរវត្ត</h2>
-            <a href="/index.html#temple" class="btn btn-outline-primary d-flex align-items-center"><i class="fa-solid fa-arrow-left"></i>  &nbsp;ត្រឡប់ក្រោយ</a>
+            <a href="./index.html#temple" class="btn btn-outline-primary d-flex align-items-center"><i class="fa-solid fa-arrow-left"></i>  &nbsp;ត្រឡប់ក្រោយ</a>
         </div>
         <div class="row">
             <div class="col-xxl-5 col-xl-5 col-lg-5 col-md-12 col-sm-12 col-12 mt-2 content">
-                <img src="/images/temple/angkorwat.jpg" alt="" class="img-fluid rounded mb-3">
+                <img src="./images/temple/angkorwat.jpg" alt="" class="img-fluid rounded mb-3">
                 <p>អង្គរវត្ត ឬប្រាសាទអង្គរតូច មានទីតាំងស្ថិតនៅភាគខាងជើងនៃក្រុងសៀមរាប នៃខេត្តសៀមរាប ដែលមានចម្ងាយ ៧គីឡូម៉ែត្រពីទីរួមខេត្តសៀមរាប តាមផ្លូវកូម៉ៃ ឬផ្លូវសាលដឺ ហ្គោល។​ ប្រាសាទដែលមាន​ប្រជាប្រិយជាងគេ​ក្នុងប្រទេសកម្ពុជានេះ ត្រូវបានគេស្គាល់​ថា​ជាប្រាសាទព្រហ្មញ្ញសាសនាដ៏​ធំបំផុត បានកសាងដើម្បី​ឧទ្ទិសដល់ព្រះវិស្ណុ ក្រោមស្នាដៃ​​ ព្រះបាទសូរ្យវរ្ម័នទី២ នៅដើម​សតវត្សទី១២ ដែលស្ថិតនៅក្នុងរាជធានី​យសោធរបុរៈ​(សម័យបច្ចុប្បន្នអង្គរ)។ ...
                 <span class="read-more">
                     ប្រាសាទអង្គរវត្តបានក្លាយជានិមិត្តរូប និងជារូបភាពតំណាងប្រទេសកម្ពុជា ហើយក៏ជាប្រាសាទមួយ​រួមចំណែកក្នុងការទាក់ទាញភ្ញៀវទេសចរជាតិ និងអន្តរជាតិដែរ។​​ ​ប្រាសាទមួយនេះ ត្រូវបានរចនាឡើង ដើម្បីតំណាងភ្នំព្រះសុមេរុ ដែលជាទីលំនៅរបស់អទិទេព និងទេវតាក្នុងទេវកថាហិណ្ឌូ ដែលមានកសិណ ឬគូទឹកព័ទ្ធជុំវិញប្រហែលជា 16គីឡូម៉ែត្រ។ ចំណែកកសិណពិតប្រាកដរបស់ប្រាសាទ មានបណ្ដោយប្រវែង 1500មែត្រ x ទទឹង​1300ម៉ែត្រ លើ២០០ម៉ែត្រ ផ្លូវធំដើរចូលពីទិសខាងលិចទៅដល់ប្រាសាទកណ្តាលមានប្រវែង ២៥០ម៉ែត្រ ឯកំពូលកណ្ដាលខ្ពស់ធំជាងគេបំផុតរបស់នគរវត្ដ មានកម្ពស់ ៦៥ម និងជញ្ជាំងខាងក្រៅ៣,៦ សហាតិមាត្រ (២,២ ម៉ៃ.)វែងគឺជាថែវមានបីជ្រុង ដែលថែវនីមួយៗឡើងខ្ពស់ទៅថែវដែលជាប់គ្នា ។​ នៅចំកណ្ដាលនៃប្រាសាទបញ្ឈរនូវជួរចតុរង្គនៃប៉ម។ មិនដូចប្រាសាទនៅតំបន់អង្គរភាគច្រើនទេ អង្គរវត្តបែរមុខទៅទិសខាងលិច តាមការស្រាវជ្រាវរបស់អ្នកសិក្សាបានវែកញែកថាជាចំណុចសំខាន់នៃប្រាសាទនេះ។ ប្រាសាទនេះត្រូវបានគេកោតសរសើរដោយសារភាពសម្បើមនិងរុងរឿងនៃស្ថាបត្យកម្មនេះ ចម្លាក់ដែលលាតសន្ធឹង និងដោយសារពពួកទេវតាដែលតាក់តែងលើជញ្ជាំងប្រាសាទ។
@@ -61,7 +61,7 @@
                     <div class="card-header border border-5 border-danger bg-danger text-white" style="outline: none;" >
                         <h5 class="mb-0 py-1  text-light">រឿងរ៉ាវដែលអ្នកត្រូរដឹងអំពីប្រាសាទអង្គរវត្ត!</h5>
                     </div>
-                    <img src="/images/temple/angkorwat-2.jpg" class="card-img-center img-fluid" alt="...">
+                    <img src="./images/temple/angkorwat-2.jpg" class="card-img-center img-fluid" alt="...">
                     <ul class="list-group list-group-flush">
                       <li class="list-group-item">១. ជាទីបូជនីយដ្ឋានខាងសាសនាធំជាងគេបំផុតលើពិភពលោក</li>
                       <li class="list-group-item">២. ការបង្ហាញខ្លួនលើទង់ជាតិ</li>
@@ -80,26 +80,26 @@
                 <hr>
                 <div class="row align-items-center more mb-3 m-0 p-0 border border-1 border-primary rounded">
                     <div class="col-xxl-6 col-xl-6 col-lg-5 col-md-4 col-4 mini-img m-0 p-0 ">
-                        <img src="/images/temple/bayon.jpg" alt="" class="rounded-start">
+                        <img src="./images/temple/bayon.jpg" alt="" class="rounded-start">
                     </div>
                     <div class="col-xxl-6 col-xl-6 col-lg-7 col-md-8 col-8  ">
-                        <a href="bayon.html">ប្រាសាទបាយ័ន</a>
+                        <a href="./bayon.html">ប្រាសាទបាយ័ន</a>
                     </div>
                 </div>
                 <div class="row align-items-center more mb-3 m-0 p-0 border border-1 border-primary rounded">
                     <div class="col-xxl-6 col-xl-6 col-lg-5 col-md-4 col-4 mini-img m-0 p-0 ">
-                        <img src="/images/temple/banteay_srey.jpg" alt="" class="rounded-start">
+                        <img src="./images/temple/banteay_srey.jpg" alt="" class="rounded-start">
                     </div>
                     <div class="col-xxl-6 col-xl-6 col-lg-7 col-md-8 col-8">
-                        <a href="banteaysrey.html">ប្រាសាទបន្ទាយស្រី</a>
+                        <a href="./banteaysrey.html">ប្រាសាទបន្ទាយស្រី</a>
                     </div>
                 </div>
                 <div class="row align-items-center more mb-3 m-0 p-0 border border-1 border-primary rounded">
                     <div class="col-xxl-6 col-xl-6 col-lg-5 col-md-4 col-4 mini-img m-0 p-0 ">
-                        <img src="/images/nature/quadBike.png" alt="" class="rounded-start" >
+                        <img src="./images/nature/quadBike.png" alt="" class="rounded-start" >
                     </div>
                     <div class="col-xxl-6 col-xl-6 col-lg-7 col-md-8 col-8  ">
-                        <a href="nature.html">តំបន់ទេសចរណ៍ធម្មជាតិ</a>
+                        <a href="./nature.html">តំបន់ទេសចរណ៍ធម្មជាតិ</a>
                     </div>
                 </div>
             </div>
@@ -112,32 +112,32 @@
                 </div>
                 <div class="col-xxl-4 col-xl-4 col-lg-4 col-md-6 col-sm-12 col-12">
                     <h5 class="alert alert-secondary" >១. ជាបូជនីយដ្ឋានសាសនាធំជាងគេបំផុតលើលោក</h5>
-                    <img src="/images/mustknow/angkorwat-1.jpg" alt="" class="object-fit-cover" height="250" width="100%" >
+                    <img src="./images/mustknow/angkorwat-1.jpg" alt="" class="object-fit-cover" height="250" width="100%" >
                     <p>យោងតាមកំណត់ត្រាហ្គីនណេសពិភពលោក (Guinness World Record) ប្រាសាទអង្គរវត្ដត្រូវបានចាត់ទុកជាទីបូជនីយដ្ឋានខាងសាសនាធំជាងគេបំផុតក្នុងពិភពលោកបើប្រៀបធៀបនឹងប្រាសាទបុរាណជាច្រើនទៀតនៃប្រទេសផ្សេងៗ។ វាលាតសន្ធឹងលើផ្ទៃដី២៤,៨ គ.ម. ជាមួយនឹងផ្ទៃក្រឡា ១.៦២៦.០០០ ម៉ែត្រការេ។ ប្រាសាទអង្គរវត្តត្រូវបានរកឃើញឡើងវិញ​ដោយ ធម្មជាតិវិទូបារាំងលោក ហង់ហ្រ៊ី មូហ៊ូត (Henri Mouhot) នៅឆ្នាំ១៨៦០។</p>
                 </div>
                 <div class="col-xxl-4 col-xl-4 col-lg-4 col-md-6 col-sm-12 col-12">
                     <h5 class="alert alert-secondary" >២. ការបង្ហាញខ្លួនលើទង់ជាតិ</h5>
-                    <img src="/images/mustknow/flag.jpg" alt="" class="object-fit-cover" height="250" width="100%" >
+                    <img src="./images/mustknow/flag.jpg" alt="" class="object-fit-cover" height="250" width="100%" >
                     <p>រូបប្រាសាទអង្គរវត្ដដែលស្ថិតនៅចំកណ្ដាលនៃទង់ជាតិប្រទេសកម្ពុជាត្រូវបានបង្ហាញរូបរាងក្នុងឆ្នាំ១៨៥០ ប្រហែលជាក្នុងអំឡុងពេលដែលកម្ពុជាស្ថិតក្រោមសម័យអាណាព្យាបាលបារាំង។</p>
                 </div>
                 <div class="col-xxl-4 col-xl-4 col-lg-4 col-md-6 col-sm-12 col-12">
                     <h5 class="alert alert-secondary" >៣. ជាសម្បត្ដិបេតិកភណ្ឌពិភពលោក</h5>
-                    <img src="/images/mustknow/angkorwat-2.jpg" alt="" class="object-fit-cover" height="250" width="100%" >
+                    <img src="./images/mustknow/angkorwat-2.jpg" alt="" class="object-fit-cover" height="250" width="100%" >
                     <p>ប្រាសាទអង្គរវត្តត្រូវបានបញ្ចូលទៅ​ក្នុងបញ្ជីបេតិកភណ្ឌពិភពលោករបស់អង្គការយូណេស្កូ (UNESCO) នៅឆ្នាំ១៩៩២។</p>
                 </div>
                 <div class="col-xxl-4 col-xl-4 col-lg-4 col-md-6 col-sm-12 col-12">
                     <h5 class="alert alert-secondary" >៤. បុព្វហេតុសាសនា</h5>
-                    <img src="/images/mustknow/vishnu.jpg" alt="" class="object-fit-cover" height="250" width="100%" >
+                    <img src="./images/mustknow/vishnu.jpg" alt="" class="object-fit-cover" height="250" width="100%" >
                     <p>ប្រាសាទអង្គរវត្ដសាងសង់ក្នុងរាជ្យកាលព្រះបាទសូរ្យវរ្ម័នទី២ក្នុងគោលបំណងឧទ្ទិសដល់សាសនាហិណ្ឌូគណៈព្រះវិស្ណុ។ ក្រោយមកដោយសារការផ្លាស់ប្ដូរសាសនាក្នុងសម័យព្រះរាជាក្រោយៗ ទើបប្រាសាទ​មួយនេះមានលក្ខណៈពុទ្ធសាសនាវិញ។</p>
                 </div>
                 <div class="col-xxl-4 col-xl-4 col-lg-4 col-md-6 col-sm-12 col-12">
                     <h5 class="alert alert-secondary" >៥. លក្ខណៈពិសេសខុសពីប្រាសាទនានា</h5>
-                    <img src="/images/mustknow/angkorwat-3.jpg" alt="" class="object-fit-cover" height="250" width="100%" >
+                    <img src="./images/mustknow/angkorwat-3.jpg" alt="" class="object-fit-cover" height="250" width="100%" >
                     <p>ចំណុចដែលធ្វើឱ្យប្រាសាទមួយនេះកាន់តែគួរឱ្យចាប់អារម្មណ៍នោះគឺការបែរមុខទៅរកទិសខាងលិច ខុសពីប្រាសាទនានាដែលបែរមុខទៅទិសខាងកើត។ ការបែរទៅទិសខាងលិចនេះដោយយោងតាមមូលហេតុដូចជា៖ វាជាផ្នូររបស់ព្រះបាទសូរ្យវរ្ម័នទី២ និងការគោរពបូជាព្រះវិស្ណុជាដើម។</p>
                 </div>
                 <div class="col-xxl-4 col-xl-4 col-lg-4 col-md-6 col-sm-12 col-12 ">
                     <h5 class="alert alert-secondary" >៦. អង្គររុងរឿងពេលដែលអឺរ៉ុបកំពុងដុនដាប</h5>
-                    <img src="/images/mustknow/Empire-Khmer.jpg" alt="" class="object-fit-cover" height="250" width="100%" >
+                    <img src="./images/mustknow/Empire-Khmer.jpg" alt="" class="object-fit-cover" height="250" width="100%" >
                     <p>ក្នុងអំឡុងចន្លោះសតវត្សទី៩និងទី១០ជាពេលដែលអឺរ៉ុបកំពុងធ្លាក់ចុះដុនដាបក្នុងយុគងងឹត តែប្រទេសក្នុងតំបន់អាស៊ីអាគ្នេយ៍វិញ ជាពិសេសប្រទេសកម្ពុជា​កំពុងស្ថិតក្នុងភាពរុងរឿងខ្លាំង នោះគឺសម័យអាណាចក្រខ្មែរ។</p>
                 </div>
             </div>
@@ -163,24 +163,24 @@
                         <h3>ក្រុមរបស់យើង</h3>
                         <div class="profile">
                             <a href="https://facebook.com/mengleang.deaun" target="_blank">
-                                <img src="/images/ourTeam/mengleang.jpg" alt="">
+                                <img src="./images/ourTeam/mengleang.jpg" alt="">
                                <span>Deaun Mengleang</span>
                             </a>
                             <a href="https://web.facebook.com/profile.php?id=100026261990477" target="_blank">
-                                <img src="/images/ourTeam/savin.jpg" alt="">
+                                <img src="./images/ourTeam/savin.jpg" alt="">
                                 <span>Em Savin</span>
                             </a>
             
                             <a href="https://web.facebook.com/nak.kh.7777" target="_blank">
-                                <img src="/images/ourTeam/vannak.JPG" alt="">
+                                <img src="./images/ourTeam/vannak.JPG" alt="">
                                 <span>Chhoeng Vannak</span>
                             </a>
                             <a href="https://web.facebook.com/pheavin.eang" target="_blank">
-                                <img src="/images/ourTeam/pheavin.JPG" alt="">
+                                <img src="./images/ourTeam/pheavin.JPG" alt="">
                                 <span>Eang Pheavin</span>
                             </a>
                             <a href="https://web.facebook.com/" target="_blank">
-                                <img src="/images/ourTeam/phalkun.jpg" alt="">
+                                <img src="./images/ourTeam/phalkun.jpg" alt="">
                                 <span>Heng Nobphalkun</span>
                             </a>
                         </div>   
@@ -214,7 +214,7 @@
         </div>
     </div>
 </body>
-<script src="action.js" ></script>
-<script src="angkorwat.js" defer ></script>
+<script src="./action.js" ></script>
+<script src="./angkorwat.js" defer ></script>
 
 </html>
