Fix image slide on home page

--- a/index.html
+++ b/index.html
@@ -155,25 +155,25 @@
             <div class="nature">
                 <div>
                     <a href="./nature.html#quadbike" >
-                        <img src="/images/nature/quadBike.png" alt="">
+                        <img src="./images/nature/quadBike.png" alt="">
                         <h3>ជិះម៉ូតូកង់បួនគយគន់ធម្មជាតិ</h3>
                     </a>
                 </div>
                 <div>
                     <a href="./nature.html#ferriswheel">
-                        <img src="/images/nature/angkorEye.jpg" alt="">
+                        <img src="./images/nature/angkorEye.jpg" alt="">
                         <h3>ទស្សនាសៀមរាបពីលើអាកាស</h3>
                     </a>
                 </div>
                 <div>
                     <a href="./nature.html">
-                        <img src="/images/nature/airballoon.jpg" alt="">
+                        <img src="./images/nature/airballoon.jpg" alt="">
                         <h3>ជិះប៊ូឡុងហោះមើលថ្ងៃលិច</h3>
                     </a>
                 </div>
                 <div>
                     <a href="./nature.html">
-                        <img src="/images/nature/koulenwaterfall.jpg" alt="">
+                        <img src="./images/nature/koulenwaterfall.jpg" alt="">
                         <h3>ទឹកធ្លាក់ភ្នំគូលេន</h3>
                     </a>
                 </div>   
