--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
             <p>ខេត្តសៀមរាប​ ជា​ទីបណ្តុំ​នៃ​ប្រាសាទបុរាណ​ជា​ច្រើន​ដែល​ស្ថិត​នៅ​ក្នុង​បញ្ជី​របស់​UNESCO​ ត្រូវ​បាន​គេ​បោះ​ឆ្នោត​ឱ្យ​ស្ថិត​នៅ​លេខ​រៀង​លំដាប់​ទី​៥ ​ក្នុង​ចំណោម​គោលដៅ​ទេសចរណ៍​ល្បីៗ​ចំនួន​២៥​ទូ​ទាំង​ពិភពលោក​កាលពី​ឆ្នាំ​២០១៥​ គួរ​បញ្ជាក់​ដែរ​ថា​ កាលពី​ឆ្នាំ​២០១៤ សៀមរាប​ បាន​ស្ថិត​នៅ​លំដាប់​លេខ​រៀង​ទី​ ២​ ដែល​ចំណាត់ថ្នាក់​ធ្វើ​ឡើង​ដោយ​ ​ TripAdvisor​ ជា​គេហទំព័រ​អន​ឡាញ​ដ៏​ពេញ​និយម​សម្រាប់​អ្នក​ធ្វើ​ដំណើរ​នានា​ ហើយ​ក៏​ជា​គេហទំព័រ​មួយ​ដែល​ត្រូវ​បាន​ទទួល​ការ​ជឿ​ទុកចិត្ត​ច្រើន​ពី​សំណាក់​អ្នក​ទេសចរណ៍​ក្នុង​ការ​ជ្រើសរើស​គោលដៅ​ទេសចរណ៍​នានា​ជុំវិញ​ពិភពលោក​។</p>
         </div>
     </div>       
-<div class="row footer" id="contact">
+<div class="row footer container" id="contact" style="padding-top: 70px;" >
     <div class="ourTeam">
         <h3>ក្រុមរបស់យើង</h3>
         <div class="profile">
@@ -296,6 +296,6 @@
    
 </body>
 <script src="./javascript/home.js"  defer></script>
-<script src="./javascript/action.js" ></script>
+<script src="./javascript/action.js" defer></script>
 
 </html>
