Add button go to top

--- a/banteaysrey.html
+++ b/banteaysrey.html
@@ -17,6 +17,11 @@
         <title>ប្រាសាទបន្ទាយស្រី</title>
     </head>
 <body>
+    <div id="progress">
+        <span id="progress-val" >
+            <i class="fa-solid fa-arrow-up"></i>
+        </span>
+    </div>
     <nav id="menu" style="background-color: black;" >
         <img src="./images/logo4.png" alt="" class="logo">
         <ul class="nav-links">
