--- a/bayon.html
+++ b/bayon.html
@@ -16,6 +16,11 @@
         <title>ប្រាសាទ​បាយ័ន</title>
     </head>
 <body>
+    <div id="progress">
+        <span id="progress-val" >
+            <i class="fa-solid fa-arrow-up"></i>
+        </span>
+    </div>
     <nav id="menu" style="background-color: black;" >
             <img src="./images/logo4.png" alt="" class="logo">
             <ul class="nav-links">
