--- a/index.html
+++ b/index.html
@@ -13,6 +13,11 @@
     <title>តស់ ទៅលេងសៀមរាប</title>
 </head>
 <body>
+    <div id="progress">
+        <span id="progress-val" >
+            <i class="fa-solid fa-arrow-up"></i>
+        </span>
+    </div>
     <div class="header">
         <nav id="menu">
             <img src="./images/logo4.png" alt="" class="logo">
