--- a/index.html
+++ b/index.html
@@ -84,14 +84,16 @@
                 </a>
             </div>
             <div>
-                <img src="./images/temple/preah_khan.jpg" alt="">
-                <div class="overlay">
-                    <span>
-                        <h3>
-                            ប្រាសាទព្រះខ័ន
-                        </h3>
-                    </span>
-                </div>
+                <a href="./prehkhan.html">
+                    <img src="./images/temple/preah_khan.jpg" alt="">
+                    <div class="overlay">
+                        <span>
+                            <h3>
+                                ប្រាសាទព្រះខ័ន
+                            </h3>
+                        </span>
+                    </div>
+                </a>
             </div>
             <div>
                 <img src="./images/temple/neak_porrn.jpeg" alt="">
